# pydblclick

./: ARCHITECTURE.md  CHANGELOG.md  MSIX_COMPATIBILITY.md  README.md  ROADMAP.md  add_to_pythonpath.py  pyproject.toml
docs/: pause-menu-double-print.md  pyw-import-directive-bootstrap.md
examples/: 01_HelloWorld.py  01a_HelloWorld.py  01b_HelloWorld_WITH_pydblclick_import.py  02_Enhanced_HelloWorld.py  02_Unexpected_exception.py  02a_Unexpected_exception.py  02b_Unexpected_exception_WITH_pydblclick_import.py  03_Syntax_error.py  03_cmd_calls_Enhanced_HelloWorld.bat  03a_Syntax_error.py  03b_Syntax_error_WITH_pydblclick_import_FAILS.py  04_Enhanced_Import_Error.py  04_Import_error.py  04a_Import_error.py  04b_Import_error_WITH_pydblclick_import.py  05_NoPause_option.py  06_Enhanced_HelloWorld_nopause_option.py  06_NoPause_option_but_exception.py  07_Enhanced_HelloWorld_nopause_option_but_exception_occurs.py  07_PEP723_dependencies.py  08_Enhanced_syntax_error.py  08_OptOut_directive.py  09_WindowedHelloWorld.pyw  10_WindowedHelloWorld_with_exception.pyw  10b_WindowedHelloWorld_WITH_pydblclick_import.pyw  11_Enhanced_WindowedHelloWorld.pyw  11_cmd_calls_a_script.bat  11b_HelloWorld.pyw_with_exception_WITH_pydblclick_FAILS.pyw  12_Normal_WindowedHelloWorld_with_exception.pyw  12_cmd_calls_a_pydblclick_enhanced_script.bat  12_distributable_import_directive.py  12_distributable_with_nudge.py  13_Enhanced_WindowedHelloWorld_with_exception.pyw  16_cmd_calls_Normal_WindowedHelloWorld_with_exception.pyw_with_pyexewrap.bat  17_cmd_calls_Normal_HelloWorld.py_with_pyexewrap.bat  (+6 more)
(+39 files in other folders)
