[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pydblclick"
version = "0.2.2"
description = "Enhances the user experience of Python scripts run via double-click on Windows"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [{ name = "TsKyrk" }]
requires-python = ">=3.8"
keywords = ["windows", "launcher", "wrapper", "double-click", "console"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]

[tool.setuptools.packages.find]
include = ["pydblclick*"]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/TsKyrk/pydblclick"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
pydblclick = "pydblclick.__main__:main"
